--- a/src/app/components/widgets/clocks/clocks.component.html
+++ b/src/app/components/widgets/clocks/clocks.component.html
@@ -1,4 +1,4 @@
-<div class="container full">
+<div class="container">
     @for( timezone of timezones; track $index) {
     <div class="clock-container">
         <p class="timezone">{{timezone}}</p>
