--- a/src/app/components/widgets/coin/coin.component.html
+++ b/src/app/components/widgets/coin/coin.component.html
@@ -5,4 +5,8 @@
             <div class="tail">T</div>
         </div>
     </div>
+    <div class="history">
+        <p>History: </p>
+        <p>{{v()}}</p>
+    </div>
 </div>
