--- a/src/app/components/widget-wrapper/widget-wrapper.component.scss
+++ b/src/app/components/widget-wrapper/widget-wrapper.component.scss
@@ -26,13 +26,14 @@
 
 .widget {
     min-width: 250px;
-    min-height: 170px;
+    min-height: 250px;
     display: flex;
     flex-direction: column;
     position: relative;
     overflow: auto;
     resize: both;
-    max-width: 100%;
+    display: inline-block;
+    box-sizing: border-box;
     margin: 10px;
     background-color: white;
     transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
