add tabs support

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,9 @@
         <button data-testid="edit-mode" mat-mini-fab (click)="addWidget()">
             <mat-icon>add_circle</mat-icon>
         </button>
-        <button>B</button>
+        <button mat-mini-fab (click)="addTab()">
+            <mat-icon>add_to_queue</mat-icon>
+        </button>
         <button>C</button>
         <button>D</button>
     </div>
