--- a/src/app/components/widgets/news/news.component.html
+++ b/src/app/components/widgets/news/news.component.html
@@ -2,8 +2,8 @@
     @if ( newsList$ | async; as news ) {
     @for( n of news; track n) {
     <div class="news-container border">
-        <div style="object-fit: contain">
-            <img width="300" height="200" ngSrc="{{n.image}}"/>
+        <div style="width: 300px; height: 200px;">
+            <img width="200" height="100" ngSrc="{{n.image}}"/>
         </div>
         <div class="news pointer" (click)="openNews(n)">
             <h1>{{n.title}}</h1>
@@ -16,7 +16,7 @@
 
     <div class="container full">
         <div class="news-container">
-            <div style="width:35%">
+            <div style="width:30%">
                 <div class="image-loader load-bck"></div>
             </div>
             <div class="news border">
