--- a/src/app/widgets-list/widgets-list.component.scss
+++ b/src/app/widgets-list/widgets-list.component.scss
@@ -2,14 +2,16 @@
     width: 100%;
     bottom: 0;
     position: fixed;
-    height: fit-content;
+    height: 25%;
     z-index: 101;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .widget {
-    height: 130px;
-    transform: scale(0.7);
-    width: 230px;
+    height: 120px;
+    width: 240px;
+    scale: 0.7;
     cursor: grab;
     background: #f9f9f9;
     border: 1px solid #ddd;
@@ -19,19 +21,21 @@
 
 .list {
     display: flex;
-    width: 100%;
+    width: fit-content;
+    height: 100%;
+    gap: 20px;
     background: rgba(255, 255, 255, 0.01);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    align-items: center;
 }
 
 .close-button {
-    position: absolute;
-    right: 10px;
-    top: 10px;
+    position: fixed;
     z-index: 100;
+    right: 10px;
     cursor: pointer
 }
 
