--- a/src/app/components/widgets/coin/coin.component.scss
+++ b/src/app/components/widgets/coin/coin.component.scss
@@ -28,6 +28,12 @@
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
     border-radius: 50%;
     perspective: 1000px;
+    animation-duration: 0s;
+    -webkit-animation-duration: 0s;
+}
+
+.animation {
+    animation-duration: 3s;
 }
 
 
@@ -62,6 +68,10 @@
     padding: 10px;
     box-sizing: border-box;
     font-family: s.$font;
+}
+
+.history>p {
+    word-wrap: break-word;
 }
 
 @keyframes flip {
