--- a/src/app/components/widgets/stock-widget/stock-widget.component.scss
+++ b/src/app/components/widgets/stock-widget/stock-widget.component.scss
@@ -6,8 +6,8 @@ div>span {
 }
 
 .chart {
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    width: 95%;
 }
 
 .container {
@@ -21,6 +21,7 @@ div>span {
 
 .details {
     font-family: s.$font;
+    font-size: 1.2rem;
     align-items: center;
     width: 100%;
     display: flex;
@@ -29,6 +30,7 @@ div>span {
     gap: 5px;
     flex-wrap: wrap;
     object-fit: cover;
+    padding-top: 20px;
 }
 
 .info {
