add widget settings dialog

--- a/src/app/components/widget-wrapper/widget-wrapper.component.html
+++ b/src/app/components/widget-wrapper/widget-wrapper.component.html
@@ -15,6 +15,9 @@
         <div>
             <mat-icon class="pointer" data-testid="delete" (click)="removeWidget()">delete</mat-icon>
         </div>
+        <div>
+            <mat-icon class="pointer" data-testid="settings" (click)="openSettings()">settings</mat-icon>
+        </div>
     </div>
     }
     @if( widget() ) {
